--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
     "@tailwindcss/vite": "^4.1.17",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.0",
+    "react-router": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
