--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@mui/styled-engine-sc": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
     "date-fns": "^4.1.0",
     "graphql": "^16.12.0",
@@ -24,6 +28,7 @@
     "react-error-boundary": "^6.0.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.6",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
