--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "3.6.2",
+    "terser": "^5.44.1",
     "vite": "^7.2.4"
   }
 }
