feat: добавлены новые компоненты для заметок и страницы заметок, добавлены настройки окружения

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.env
+.env.*.local
+.next
+.out
+.build
+.cache
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
